--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-this is how we it.
+<!doctype html>
+  <html>
+    <head>
+      <meta charset="utf-8"
+      <tital>BOD summer 2016 Portfolio</tital>
+    </head>
+    <body>
+      <h1>my project</h1>
+      <ul>
+        <li><a href="reipe.html">my mac and cheese</a></li>
+      <li><a href="reipe.html">mondrian</a></li>
+      </ul>
+  </body>
+  </html>
