--- a/recipe.html
+++ b/recipe.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html> 
+    <head>
+        <meta charset="utf-8">
+        <title>My Mac and Cheese</title>
+    </head>
+    <body>
+        <h1>My mack and Cheese</h1>
+    <P>Mac and cheese is a very simple, dealicous meal for when your parenst are not home or if your feeling lasy. All it is is maccaroni and  cheese, that all it is. You would usaly eat it for lunch or dinner, and tastes best with water as your drink.</p> 
+    <h2>Ingredients</h2> 
+<ul> <li> Macerioni and cheeese (come on a box)</li>
+    <li>milk</li>
+    <li>butter</li>
+    <li>margarine</li></ul>
+<h3> Instructions</h3>
+  <ol><li>First you boil some water and put the macorini in</li>
+   <li>After a while, put the cheese in with the maccorioi</li>
+  <li>add put ether butter/margarine or milk, doesnt matter what order</ol>  
+   <img src="https://www.kasandbox.org/programming-images/food/hamburger.png"
+   
+    </body>
+   
+</html>
 
