--- a/penguin/index.html
+++ b/penguin/index.html
@@ -1,1 +1,41 @@
+<!doctype html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title> penguins!</title>
+          <style>
+            body {
+              background-color:#ccf5f5;
+            }
+            #gameholder {
+              width: 600px;
+              margin-left: auto;
+              margin-right: auto;
+            }
+              #title {
+                width: 600px;
+                height: 150;
+                background-image:url('penguin_pngs/title.png');
+              }
+              .penguin1 {
+    width: 200px;
+    height: 200px;
+    float: left;
+    background-image:url('/static/apps/pop_up_penguins/media/mound_1.png');
+}
+    .penguin1:hover {
+        background-image:url('');
+        cursor: pointer;
+}
+        .penguin1:active {
+        background-image:url('');
+    }
+          <style>
+    </head>
+    <body>
+        <div id="gameholder">
+            <div id="title"></div>
+        </div>
+    </body>
+</html>
 
